SET(SHR3D_HEADER_FILES
        shr3d.h)

SET(SHR3D_SOURCE_FILES
        shr3d.cpp)

ADD_LIBRARY(SHR3D_LIB STATIC ${SHR3D_HEADER_FILES} ${SHR3D_SOURCE_FILES})
TARGET_LINK_LIBRARIES(SHR3D_LIB
        PUBLIC
        PUBGEO_LIB)

### Add some executables to play with.
### Main exe will showcase all features
ADD_EXECUTABLE(shr3d main.cpp)
TARGET_LINK_LIBRARIES(shr3d
        PUBLIC
        SHR3D_LIB)

if(PUBGEO_INSTALL_SHR3D)
    INSTALL(TARGETS shr3d
        RUNTIME DESTINATION bin)
endif()

IF(TESTING)
    ## This executable will be used to test IO
    ADD_EXECUTABLE(shr3dTest test-main.cpp)
    TARGET_LINK_LIBRARIES(shr3dTest
            PUBLIC
            SHR3D_LIB)
ENDIF()

IF(WIN32)
    SET(SHR3D_WRITER_NAME libpdal_plugin_writer_shr3d)
ELSE(WIN32)
    SET(SHR3D_WRITER_NAME pdal_plugin_writer_shr3d)
ENDIF(WIN32)

ADD_LIBRARY(${SHR3D_WRITER_NAME} SHARED plugin.cpp)
TARGET_LINK_LIBRARIES(${SHR3D_WRITER_NAME} ${PDAL_LIBRARIES} SHR3D_LIB)
SET_TARGET_PROPERTIES(${SHR3D_WRITER_NAME} PROPERTIES SOVERSION "0.1.0")
INSTALL(TARGETS ${SHR3D_WRITER_NAME}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)
